test/corpus/entry_types.txt
=============================
entry transaction one string
=============================

2013-05-18 * "Nice dinner at Mermaid Inn"
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
    (entry
        (transaction
            (date)
            (txn)
            (txn_strings)
            (posting
                (account)
                (number_expr)
                (currency)
            )
            (posting
                (account)
                (number_expr)
                (currency)
            )
        )
    )
)

=============================
entry transaction two string
=============================

2013-05-18 * "Mermaid Inn" "Nice dinner"
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
    (entry
        (transaction
            (date)
            (txn)
            (txn_strings)
            (posting
                (account)
                (number_expr)
                (currency)
            )
            (posting
                (account)
                (number_expr)
                (currency)
            )
        )
    )
)

===================================
entry transaction with txn keyword
===================================

2013-05-18 txn "Nice dinner at Mermaid Inn"
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
    (entry
        (transaction
            (date)
            (txn)
            (txn_strings)
            (posting
                (account)
                (number_expr)
                (currency)
            )
            (posting
                (account)
                (number_expr)
                (currency)
            )
        )
    )
)

==============
entry balance
==============

2013-05-18 balance Assets:US:BestBank:Checking  200 USD

---

(file
    (entry
        (balance
            (date)
            (account)
            (amount_tolerance
                (number_expr)
                (currency)
            )
        )
    )
)

===============
entry balnce 2
===============

2013-05-18 balance Assets:US:BestBank:Checking  200 ~ 0.002 USD

---

(file
    (entry
        (balance
            (date)
            (account)
            (amount_tolerance
                (number_expr)
                (number_expr)
                (currency)
            )
        )
    )
)

===========
entry open
===========

2013-05-18 open Assets:US:BestBank:Checking

---

(file
    (entry
        (open
            (date)
            (account)
        )
    )
)

=============
entry open 2
=============

2013-05-18 open Assets:US:BestBank:Checking   USD

---

(file
    (entry
        (open
            (date)
            (account)
            (currency)
        )
    )
)

=============
entry open 3
=============

2013-05-18 open Assets:Cash   USD,CAD,EUR

---

(file
    (entry
        (open
            (date)
            (account)
            (currency)
            (currency)
            (currency)
        )
    )
)

=============
entry open 4
=============

2013-05-18 open Assets:US:Vanguard:VIIPX  VIIPX  "STRICT"

---

(file
    (entry
        (open
            (date)
            (account)
            (currency)
            (opt_booking)
        )
    )
)

=============
entry open 5
=============

2013-05-18 open Assets:US:Vanguard:VIIPX    "STRICT"

---

(file
    (entry
        (open
            (date)
            (account)
            (opt_booking)
        )
    )
)

============
entry close
============

2013-05-18 close Assets:US:BestBank:Checking

---

(file
    (entry
        (close
            (date)
            (account)
        )
    )
)

================
entry commodity
================

2013-05-18 commodity MSFT

---

(file
    (entry
        (commodity
            (date)
            (currency)
        )
    )
)

==========
entry pad
==========

2013-05-18 pad Assets:US:BestBank:Checking  Equity:Opening-Balances

---

(file
    (entry
        (pad
            (date)
            (account)
            (account)
        )
    )
)

============
entry event
============

2013-05-18 event "location" "New York, USA"

---

(file
    (entry
        (event
            (date)
        )
    )
)

==================
entry event empty
==================

2013-05-18 event "location" ""

---

(file
    (entry
        (event
            (date)
        )
    )
)

============
entry query
============

2013-05-18 query "cash" "SELECT SUM(position) WHERE currency = 'USD'"

---

(file
    (entry
        (query
            (date)
        )
    )
)

===========
entry note
===========

2013-05-18 note Assets:US:BestBank:Checking  "Blah, di blah."

---

(file
    (entry
        (note
            (date)
            (account)
        )
    )
)

===============
entry document
===============

2013-05-18 document Assets:US:BestBank:Checking "/Accounting/statement.pdf"

---

(file
    (entry
        (document
            (date)
            (account)
            (filename)
        )
    )
)

============
entry price
============

2013-05-18 price USD   1.0290 CAD

---

(file
    (entry
        (price
            (date)
            (currency)
            (amount
                (number_expr)
                (currency)
            )
        )
    )
)

=============
entry custom
=============

2013-05-18 custom "budget" "weekly < 1000.00 USD" 2016-02-28 TRUE 43.03 USD 23

---

(file
    (entry
        (custom
            (date)
            (custom_value)
            (custom_value
                (date)
            )
            (custom_value)
            (custom_value
                (amount
                    (number_expr)
                    (currency)
                )
            )
            (custom_value
                (number_expr)
            )
        )
    )
)
