test/corpus/markdown_orgmode.txt
==============
orgmode heading
==============

* TITLE

2014-04-20 * "Money from CC" ^610fa7f17e7a #trip
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
    (section (headline (item))
        (transaction
            (date)
            (txn (asterisk))
            (txn_strings (string))
            (tags_links (link) (tag))
            (posting_or_kv_list
                (posting
                    (account)
                    (incomplete_amount (number) (currency))
                )
                (posting
                    (account)
                    (incomplete_amount (unary_number_expr (minus) (number)) (currency))
                )
            )
        )
    )
)

==============
orgmode subheading
==============

****** TITLE
2014-04-20 * "Money from CC" ^610fa7f17e7a #trip
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
    (section (headline (item))
        (transaction
            (date)
            (txn (asterisk))
            (txn_strings (string))
            (tags_links (link) (tag))
            (posting_or_kv_list
                (posting
                    (account)
                    (incomplete_amount (number) (currency))
                )
                (posting
                    (account)
                    (incomplete_amount (unary_number_expr (minus) (number)) (currency))
                )
            )
        )
    )
)
